--- a/.github/workflows/deploy-to-server.yml
+++ b/.github/workflows/deploy-to-server.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@develop
+      - uses: actions/checkout@master
       - name: "Build deployment code for standalone"
         env:
           remote_host: ${{ secrets.DEPLOY_HOST }}
