--- a/.github/workflows/deploy-to-server.yml
+++ b/.github/workflows/deploy-to-server.yml
@@ -5,9 +5,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@develop
       - name: "Build deployment code for standalone"
         env:
           remote_host: ${{ secrets.DEPLOY_HOST }}
