update to deploy to server

--- a/.github/workflows/deploy-to-server.yml
+++ b/.github/workflows/deploy-to-server.yml
@@ -1,7 +1,11 @@
-name: "Deploy to Server"
+name: "Deploy to Server Dev"
 
 on:
+  push:
+    branches:
+      - develop
   workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
