--- a/.github/workflows/deploy-to-server.yml
+++ b/.github/workflows/deploy-to-server.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@develop
+      - uses: actions/checkout@main
       - name: "Build deployment code for standalone"
         env:
           remote_host: ${{ secrets.DEPLOY_HOST }}
@@ -21,6 +21,7 @@ jobs:
           local_dir: "build/"
           remote_dir: "~/kmaps-apps-infrastructure/volumes/mandala-om/development/mandala-om/"
         run: |
+          git checkout develop
           cd kmaps-app
           npm install
           CI=false npm run build
