--- a/kmaps-app/package.json
+++ b/kmaps-app/package.json
@@ -15,6 +15,7 @@
         "axios-jsonp": "^1.0.4",
         "bootstrap": "^4.5.2",
         "easy-peasy": "^3.3.1",
+        "env-cmd": "^10.1.0",
         "esri-loader": "^2.16.0",
         "headroom.js": "^0.11.0",
         "html-to-react": "^1.4.3",
@@ -60,7 +61,7 @@
         "stagestart": "sh -ac '. .env.test; react-scripts start'",
         "prodstart": "sh -ac '. .env.production; react-scripts start'",
         "localbuild": "sh -ac '. .env.development; react-scripts build; rsync -ra ./build/ ../../nginx/src/mandala/'",
-        "devbuild": "sh -ac '. .env.develop; react-scripts build'",
+        "devbuild": "env-cmd -f ./.env.development npm run-script build",
         "standalone": "REACT_APP_STANDALONE=standalone react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
