--- a/kmaps-app/package.json
+++ b/kmaps-app/package.json
@@ -29,6 +29,7 @@
         "openseadragon": "^2.4.2",
         "popper.js": "^1.16.1",
         "qs": "^6.9.4",
+        "query-string": "^4.3.4",
         "rc-input-number": "^5.1.1",
         "react": "^17.0.1",
         "react-bootstrap": "^1.3.0",
@@ -53,6 +54,7 @@
         "slugify": "^1.4.7",
         "spex": "^3.0.2",
         "typescript": "^3.9.7",
+        "use-query-params": "^1.2.0",
         "zustand": "^3.3.3"
     },
     "scripts": {
