--- a/kmaps-app/package.json
+++ b/kmaps-app/package.json
@@ -17,6 +17,7 @@
         "easy-peasy": "^3.3.1",
         "env-cmd": "^10.1.0",
         "esri-loader": "^2.16.0",
+        "filter-obj": "^1.1.0",
         "headroom.js": "^0.11.0",
         "html-to-react": "^1.4.3",
         "jquery": "^3.5.1",
