--- a/kmaps-app/package.json
+++ b/kmaps-app/package.json
@@ -54,6 +54,7 @@
         "react-use-dimensions": "^1.2.1",
         "slugify": "^1.4.7",
         "spex": "^3.0.2",
+        "split-on-first": "^1.1.0",
         "typescript": "^3.9.7",
         "use-query-params": "^1.2.0",
         "zustand": "^3.3.3"
