--- a/kmaps-app/package.json
+++ b/kmaps-app/package.json
@@ -35,6 +35,7 @@
         "react": "^17.0.1",
         "react-bootstrap": "^1.3.0",
         "react-dom": "^17.0.1",
+        "react-error-boundary": "^3.1.1",
         "react-html-parser": "^2.0.2",
         "react-icons": "^3.11.0",
         "react-iiif-viewer": "^1.0.2",
@@ -63,7 +64,7 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "devbuild": "env-cmd -f ./.env.development npm run-script build",
-        "standalone": "REACT_APP_STANDALONE=standalone react-scripts build",
+        "standalone": "REACT_APP_STANDALONE=standalone env-cmd -f ./.env.development react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "predeploy": "npm run build",
