--- a/.github/workflows/deploy-to-server.yml
+++ b/.github/workflows/deploy-to-server.yml
@@ -10,7 +10,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@develop
+      - uses: actions/checkout@master
+        with:
+          ref: develop
       - name: "Build deployment code for standalone"
         env:
           remote_host: ${{ secrets.DEPLOY_HOST }}
