--- a/kmaps-app/package.json
+++ b/kmaps-app/package.json
@@ -64,7 +64,7 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "devbuild": "env-cmd -f ./.env.development npm run-script build",
-        "standalone": "REACT_APP_STANDALONE=standalone env-cmd -f ./.env.development react-scripts build",
+        "standalone": "REACT_APP_STANDALONE=standalone react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "predeploy": "npm run build",
