--- a/kmaps-app/package.json
+++ b/kmaps-app/package.json
@@ -5,6 +5,7 @@
     "homepage": "https://dev-standalone.kmaps.virginia.edu/",
     "dependencies": {
         "@emotion/styled": "^10.0.27",
+        "@fortawesome/fontawesome-svg-core": "^1.2.35",
         "@fortawesome/free-solid-svg-icons": "^5.15.3",
         "@fortawesome/react-fontawesome": "^0.1.14",
         "@react-google-maps/api": "^1.13.0",
