--- a/kmaps-app/package.json
+++ b/kmaps-app/package.json
@@ -67,11 +67,10 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "devbuild": "env-cmd -f ./.env.development npm run-script build",
+        "prodbuild": "env-cmd -f ./.env.production npm run-script build",
         "standalone": "REACT_APP_STANDALONE=standalone react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "predeploy": "npm run build",
-        "deploy": "NODE_DEBUG=gh-pages gh-pages -d build"
+        "eject": "react-scripts eject"
     },
     "eslintConfig": {
         "extends": "react-app"
