--- a/kmaps-app/package.json
+++ b/kmaps-app/package.json
@@ -68,7 +68,7 @@
         "build": "react-scripts build",
         "devbuild": "env-cmd -f ./.env.development npm run-script build",
         "prodbuild": "env-cmd -f ./.env.production npm run-script build",
-        "standalone": "REACT_APP_STANDALONE=standalone react-scripts build",
+        "standalone": "REACT_APP_STANDALONE=standalone npm run-script devbuild",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
