--- a/kmaps-app/package.json
+++ b/kmaps-app/package.json
@@ -54,6 +54,7 @@
         "react-router-dom": "^5.2.0",
         "react-scripts": "^3.4.3",
         "react-select": "^3.1.0",
+        "react-simple-resizer": "^2.1.0",
         "react-transition-group": "^4.4.1",
         "react-use-dimensions": "^1.2.1",
         "slugify": "^1.4.7",
