--- a/kmaps-app/.env.production.local
+++ b/kmaps-app/.env.production.local
@@ -15,3 +15,5 @@ REACT_APP_PUBLIC_URL=https://mandala.kmaps.virginia.edu
 REACT_APP_STANDALONE_PATH=/mandala
 REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyAXpnXkPS39-Bo5ovHQWvyIk6eMgcvc1q4
 REACT_APP_GOSERVER_URL=https://dev-places.kmaps.virginia.edu/geoserver/
+REACT_APP_PROJECT=uf
+REACT_APP_TERMS_PERSPECTIVE=eng.alpha
