--- a/kmaps-app/.env.production
+++ b/kmaps-app/.env.production
@@ -1,6 +1,6 @@
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_SOLR_KMASSETS=https://ss395824-us-east-1-aws.measuredsearch.com/solr/kmassets
-REACT_APP_SOLR_KMTERMS=https://ss395824-us-east-1-aws.measuredsearch.com/solr/kmterms_prod
+REACT_APP_SOLR_KMASSETS=https://ss251856-us-east-1-aws.measuredsearch.com/solr/kmassets_dev
+REACT_APP_SOLR_KMTERMS=https://ss251856-us-east-1-aws.measuredsearch.com/solr/kmterms_dev
 REACT_APP_DRUPAL_HOME=https://mandala.shanti.virginia.edu
 REACT_APP_DRUPAL_AUDIO_VIDEO=https://audio-video.shanti.virginia.edu
 REACT_APP_DRUPAL_IMAGES=https://images.shanti.virginia.edu
