--- a/kmaps-app/.env.development
+++ b/kmaps-app/.env.development
@@ -1,15 +1,15 @@
 SKIP_PREFLIGHT_CHECK=true
 REACT_APP_SOLR_KMASSETS=https://ss251856-us-east-1-aws.measuredsearch.com/solr/kmassets_dev
 REACT_APP_SOLR_KMTERMS=https://ss251856-us-east-1-aws.measuredsearch.com/solr/kmterms_dev
-REACT_APP_DRUPAL_HOME=https://mandala-dev.shanti.virginia.edu
-REACT_APP_DRUPAL_AUDIO_VIDEO=https://audio-video-dev.shanti.virginia.edu
-REACT_APP_DRUPAL_IMAGES=https://images-dev.shanti.virginia.edu
-REACT_APP_DRUPAL_SOURCES=https://sources-dev.shanti.virginia.edu
-REACT_APP_DRUPAL_PLACES=https://mandala-dev.shanti.virginia.edu/places
-REACT_APP_DRUPAL_SUBJECTS=https://mandala-dev.shanti.virginia.edu/subjects
-REACT_APP_DRUPAL_TERMS=https://mandala-dev.shanti.virginia.edu/terms
-REACT_APP_DRUPAL_TEXTS=https://texts-dev.shanti.virginia.edu
-REACT_APP_DRUPAL_VISUALS=https://visuals-dev.shanti.virginia.edu
+REACT_APP_DRUPAL_HOME=https://mandala-dev.internal.lib.virginia.edu
+REACT_APP_DRUPAL_AUDIO_VIDEO=https://mandala-av-dev.internal.lib.virginia.edu
+REACT_APP_DRUPAL_IMAGES=https://mandala-images-dev.internal.lib.virginia.edu
+REACT_APP_DRUPAL_SOURCES=https://mandala-sources-dev.internal.lib.virginia.edu
+REACT_APP_DRUPAL_PLACES=https://mandala-dev.internal.lib.virginia.edu/places
+REACT_APP_DRUPAL_SUBJECTS=https://mandala-dev.internal.lib.virginia.edu/subjects
+REACT_APP_DRUPAL_TERMS=https://mandala-dev.internal.lib.virginia.edu/terms
+REACT_APP_DRUPAL_TEXTS=https://mandala-texts-dev.internal.lib.virginia.edu
+REACT_APP_DRUPAL_VISUALS=https://mandala-visuals-dev.internal.lib.virginia.edu
 REACT_APP_MANDALA_KB=https://confluence.its.virginia.edu/display/KB/Mandala+Suite+of+Tools
 REACT_APP_PUBLIC_URL=https://dev-standalone.kmaps.virginia.edu/
 REACT_APP_PUBLIC_PATH=/
