--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "react": "^16.14.0",
+    "react-html-parser": "^2.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0"
   }
