--- a/kmaps-app/.env.tibet
+++ b/kmaps-app/.env.tibet
@@ -1,3 +1,5 @@
+PUBLIC_URL=/wp-content/plugins/mandala/app/build
+REACT_APP_STANDALONE=standalone
 SKIP_PREFLIGHT_CHECK=true
 REACT_APP_SOLR_KMASSETS=https://ss251856-us-east-1-aws.measuredsearch.com/solr/kmassets_dev
 REACT_APP_SOLR_KMTERMS=https://ss251856-us-east-1-aws.measuredsearch.com/solr/kmterms_dev
