--- a/kmaps-app/.env.uf
+++ b/kmaps-app/.env.uf
@@ -1,3 +1,5 @@
+PUBLIC_URL=/wp-content/plugins/mandala/app/build
+REACT_APP_STANDALONE=standalone
 SKIP_PREFLIGHT_CHECK=true
 REACT_APP_SOLR_KMASSETS=https://ss395824-us-east-1-aws.measuredsearch.com/solr/kmassets
 REACT_APP_SOLR_KMTERMS=https://ss395824-us-east-1-aws.measuredsearch.com/solr/kmterms_prod
