Update to get settings to work in standalones

--- a/kmaps-app/.env.tibet
+++ b/kmaps-app/.env.tibet
@@ -20,3 +20,4 @@ REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyAXpnXkPS39-Bo5ovHQWvyIk6eMgcvc1q4
 REACT_APP_GOSERVER_URL=https://dev-places.kmaps.virginia.edu/geoserver/
 REACT_APP_PROJECT=tibet
 REACT_APP_TERMS_PERSPECTIVE=tib.alpha
+REACT_APP_TERMS_VIEW=75|pri.tib.sec.roman
