--- a/kmaps-app/package.json
+++ b/kmaps-app/package.json
@@ -2,7 +2,7 @@
     "name": "kmaps-app",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://mandala.kmaps.virginia.edu/",
+    "homepage": "https://dev-standalone.kmaps.virginia.edu/",
     "dependencies": {
         "@emotion/styled": "^10.0.27",
         "@fortawesome/fontawesome-svg-core": "^1.2.35",
