updating wordpress-deploy-dev.yml to add cd into kmaps-app directory

--- a/.github/workflows/wordpress-deploy-dev.yml
+++ b/.github/workflows/wordpress-deploy-dev.yml
@@ -27,5 +27,7 @@ jobs:
         with:
           node-version: 14.x
           cache: "npm"
-      - run: npm ci
-      - run: npm run ${{ matrix.site }} --if-present
+      - run: |
+          cd kmaps-app
+          npm ci
+          npm run ${{ matrix.site }} --if-present
