--- a/.github/workflows/wordpress-deploy-dev.yml
+++ b/.github/workflows/wordpress-deploy-dev.yml
@@ -28,6 +28,6 @@ jobs:
           node-version: 14.x
           cache: "npm"
       - run: |
-          cd kmaps-app
+          cd ./kmaps-app
           npm ci
           npm run ${{ matrix.site }} --if-present
