--- a/.github/workflows/wordpress-deploy-dev.yml
+++ b/.github/workflows/wordpress-deploy-dev.yml
@@ -27,7 +27,5 @@ jobs:
         with:
           node-version: 14.x
           cache: "npm"
-      - run: |
-          cd ./kmaps-app
-          npm ci
-          npm run ${{ matrix.site }} --if-present
+      - run: npm ci
+      - run: npm run ${{ matrix.site }} --if-present
