--- a/.github/workflows/wordpress-deploy-dev.yml
+++ b/.github/workflows/wordpress-deploy-dev.yml
@@ -19,23 +19,24 @@ jobs:
             site: "ufbuild"
             localdir: "build/"
             remotedir: "~/dev.flourishingu.org/wp-content/plugins/mandala/app/"
-            remote_host: ${{ secrets.UF_DEV_HOST_NAME }}
-            remote_port: ${{ secrets.UF_DEV_PORT }}
-            remote_user: ${{ secrets.UF_DEV_USER }}
-            remote_key: ${{ secrets.UF_DEV_PRIVATE_KEY }}
     steps:
       - uses: actions/checkout@v2
         with:
           ref: "develop"
       - name: Use Node.js 14.x for ${{ matrix.site }}
         uses: actions/setup-node@v2
+        env:
+          remote_host: ${{ secrets.UF_DEV_HOST_NAME }}
+          remote_port: ${{ secrets.UF_DEV_PORT }}
+          remote_user: ${{ secrets.UF_DEV_USER }}
+          remote_key: ${{ secrets.UF_DEV_PRIVATE_KEY }}
         with:
           node-version: 14.x
           cache: "npm"
       - run: |
           npm ci
-          CI=false npm run ${matrix.site} --if-present
+          CI=false npm run ${{matrix.site}} --if-present
           mkdir ~/.ssh
-          echo "${matrix.remote_key}" > ~/.ssh/id_rsa_wp_mandala
+          echo "$remote_key" > ~/.ssh/id_rsa_wp_mandala
           chmod 400 ~/.ssh/id_mandala-om
-          rsync -avzr --delete -e "ssh -p ${matrix.remote_port} -i ~/.ssh/id_rsa_wp_mandala -o StrictHostKeyChecking=no" ${matrix.localdir} ${matrix.remote_user}@${matrix.remote_host}:${matrix.remotedir}
+          rsync -avzr --delete -e "ssh -p $remote_port -i ~/.ssh/id_rsa_wp_mandala -o StrictHostKeyChecking=no" ${{matrix.localdir}} $remote_user@$remote_host:${{matrix.remotedir}}
