--- a/.github/workflows/wordpress-deploy-dev.yml
+++ b/.github/workflows/wordpress-deploy-dev.yml
@@ -25,15 +25,16 @@ jobs:
           ref: "develop"
       - name: Use Node.js 14.x for ${{ matrix.site }}
         uses: actions/setup-node@v2
+        with:
+          node-version: 14.x
+          cache: "npm"
+      - name: Create build and copy to server
         env:
           remote_host: ${{ secrets.UF_DEV_HOST_NAME }}
           remote_port: ${{ secrets.UF_DEV_PORT }}
           remote_user: ${{ secrets.UF_DEV_USER }}
           remote_key: ${{ secrets.UF_DEV_PRIVATE_KEY }}
-        with:
-          node-version: 14.x
-          cache: "npm"
-      - run: |
+        run: |
           npm ci
           CI=false npm run ${{matrix.site}} --if-present
           mkdir ~/.ssh
