--- a/.github/workflows/wordpress-deploy-thl-dev.yml
+++ b/.github/workflows/wordpress-deploy-thl-dev.yml
@@ -1,9 +1,9 @@
 name: Deploy THL_DEV
 on:
   push:
-    branches: [develop-onhold]
+    branches: [develop]
   pull_request:
-    branches: [develop-onhold]
+    branches: [develop]
   workflow_dispatch:
     branches: [develop]
 
