--- a/kmaps-app/package.json
+++ b/kmaps-app/package.json
@@ -42,6 +42,7 @@
         "react-html-parser": "^2.0.2",
         "react-icons": "^3.11.0",
         "react-iiif-viewer": "^1.0.2",
+        "react-image-gallery": "^1.2.7",
         "react-images": "^1.1.7",
         "react-lines-ellipsis": "^0.14.1",
         "react-loading-skeleton": "^2.1.1",
