--- a/.github/workflows/deploy-to-server-dev.yml
+++ b/.github/workflows/deploy-to-server-dev.yml
@@ -13,7 +13,12 @@ jobs:
       - uses: actions/checkout@master
         with:
           ref: develop
-      - name: "Build deployment code for standalone"
+      - name: Use Node.js 14.x for Standalone Dev
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14.x
+          cache: "npm"
+      - name: Build deployment code for standalone
         env:
           remote_host: ${{ secrets.DEPLOY_HOST }}
           remote_port: ${{ secrets.DEPLOY_PORT }}
