--- a/kmaps-app/package.json
+++ b/kmaps-app/package.json
@@ -27,7 +27,6 @@
         "jquery.fancytree": "^2.36.1",
         "localforage": "^1.8.1",
         "lodash": "^4.17.19",
-        "node-sass": "^4.14.1",
         "ol": "^6.4.3",
         "olgm": "^1.7.0",
         "openseadragon": "^2.4.2",
@@ -57,6 +56,7 @@
         "react-simple-resizer": "^2.1.0",
         "react-transition-group": "^4.4.1",
         "react-use-dimensions": "^1.2.1",
+        "sass": "^1.50.0",
         "slugify": "^1.4.7",
         "spex": "^3.0.2",
         "split-on-first": "^1.1.0",
@@ -103,5 +103,9 @@
         "hooks": {
             "pre-commit": "pretty-quick --staged"
         }
+    },
+    "engines": {
+        "node": ">=16.0.0",
+        "npm": ">=7.0.0"
     }
 }
