--- a/kmaps-app/.env.development
+++ b/kmaps-app/.env.development
@@ -1,6 +1,6 @@
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_SOLR_KMASSETS=https://ss251856-us-east-1-aws.measuredsearch.com/solr/kmassets_dev
-REACT_APP_SOLR_KMTERMS=https://ss251856-us-east-1-aws.measuredsearch.com/solr/kmterms_dev
+REACT_APP_SOLR_KMASSETS=https://mandala-solr-replica-dev.internal.lib.virginia.edu/solr/kmassets
+REACT_APP_SOLR_KMTERMS=https://mandala-solr-replica-dev.internal.lib.virginia.edu/solr/kmterms
 REACT_APP_DRUPAL_HOME=https://mandala-dev.internal.lib.virginia.edu
 REACT_APP_DRUPAL_AUDIO_VIDEO=https://mandala-av-dev.internal.lib.virginia.edu
 REACT_APP_DRUPAL_IMAGES=https://mandala-images-dev.internal.lib.virginia.edu
