updated all measuredsearch urls to use mandala-solr-replica urls

--- a/kmaps-app/.env.uf.prod
+++ b/kmaps-app/.env.uf.prod
@@ -1,8 +1,8 @@
 PUBLIC_URL=/wp-content/plugins/mandala/app/build
 REACT_APP_STANDALONE=standalone
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_SOLR_KMASSETS=https://ss395824-us-east-1-aws.measuredsearch.com/solr/kmassets
-REACT_APP_SOLR_KMTERMS=https://ss395824-us-east-1-aws.measuredsearch.com/solr/kmterms_prod
+REACT_APP_SOLR_KMASSETS=https://mandala-solr-replica.internal.lib.virginia.edu/solr/kmassets
+REACT_APP_SOLR_KMTERMS=https://mandala-solr-replica.internal.lib.virginia.edu/solr/kmterms
 REACT_APP_DRUPAL_HOME=https://mandala.library.virginia.edu
 REACT_APP_DRUPAL_AUDIO_VIDEO=https://av.mandala.library.virginia.edu
 REACT_APP_DRUPAL_IMAGES=https://images.mandala.library.virginia.edu
