--- a/kmaps-app/.env.production
+++ b/kmaps-app/.env.production
@@ -1,6 +1,6 @@
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_SOLR_KMASSETS=https://mandala-solr-proxy-dev.internal.lib.virginia.edu/solr/kmassets
-REACT_APP_SOLR_KMTERMS=https://mandala-solr-proxy-dev.internal.lib.virginia.edu/solr/kmterms
+REACT_APP_SOLR_KMASSETS=https://mandala-solr-proxy.internal.lib.virginia.edu/solr/kmassets
+REACT_APP_SOLR_KMTERMS=https://mandala-solr-proxy.internal.lib.virginia.edu/solr/kmterms
 REACT_APP_DRUPAL_HOME=https://mandala.library.virginia.edu
 REACT_APP_DRUPAL_AUDIO_VIDEO=https://av.mandala.library.virginia.edu
 REACT_APP_DRUPAL_IMAGES=https://images.mandala.library.virginia.edu
