--- a/kmaps-app/.env.development
+++ b/kmaps-app/.env.development
@@ -15,7 +15,7 @@ REACT_APP_PUBLIC_URL=https://dev-standalone.kmaps.virginia.edu/
 REACT_APP_PUBLIC_PATH=/
 REACT_APP_STANDALONE_PATH=/mandala
 REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyAXpnXkPS39-Bo5ovHQWvyIk6eMgcvc1q4
-REACT_APP_GOSERVER_URL=https://dev-places.kmaps.virginia.edu/geoserver/
+REACT_APP_GOSERVER_URL=https://places.kmaps.virginia.edu/geoserver/
 REACT_APP_PROJECT=
 REACT_APP_TERMS_PERSPECTIVE=
 
