--- a/kmaps-app/.env.tibet
+++ b/kmaps-app/.env.tibet
@@ -17,7 +17,7 @@ REACT_APP_PUBLIC_URL=https://thdl.shanti.a2hosted.com/
 REACT_APP_PUBLIC_PATH=/
 REACT_APP_STANDALONE_PATH=/mandala
 REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyAXpnXkPS39-Bo5ovHQWvyIk6eMgcvc1q4
-REACT_APP_GOSERVER_URL=https://dev-places.kmaps.virginia.edu/geoserver/
+REACT_APP_GOSERVER_URL=https://places.kmaps.virginia.edu/geoserver/
 REACT_APP_PROJECT=tibet
 REACT_APP_TERMS_PERSPECTIVE=tib.alpha
 REACT_APP_TERMS_SORT=cascading_position_i
