--- a/kmaps-app/package.json
+++ b/kmaps-app/package.json
@@ -36,6 +36,7 @@
         "rc-input-number": "^5.1.1",
         "react": "^16.13.1",
         "react-bootstrap": "^1.3.0",
+        "react-cookie": "^4.1.1",
         "react-dom": "^16.13.1",
         "react-error-boundary": "^3.1.1",
         "react-html-parser": "^2.0.2",
