updates to login

--- a/kmaps-app/.env.development
+++ b/kmaps-app/.env.development
@@ -18,4 +18,6 @@ REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyAXpnXkPS39-Bo5ovHQWvyIk6eMgcvc1q4
 REACT_APP_GOSERVER_URL=https://places.kmaps.virginia.edu/geoserver
 REACT_APP_PROJECT=
 REACT_APP_TERMS_PERSPECTIVE=
+REACT_APP_LOGIN_URL=https://cicada.shanti.virginia.edu/solrproxy/auth.php
+REACT_APP_HOME_URL=https://dev-standalone.kmaps.virginia.edu/
 
