--- a/kmaps-app/.env.development
+++ b/kmaps-app/.env.development
@@ -19,5 +19,6 @@ REACT_APP_GOSERVER_URL=https://places.kmaps.virginia.edu/geoserver
 REACT_APP_PROJECT=
 REACT_APP_TERMS_PERSPECTIVE=
 REACT_APP_LOGIN_URL=https://cicada.shanti.virginia.edu/solrproxy/auth.php
+REACT_APP_LOGOUT_URL=https://cicada.shanti.virginia.edu/solrproxy/logout.php
 REACT_APP_HOME_URL=https://dev-standalone.kmaps.virginia.edu/
 
