Update to dev environment to use solr proxy

--- a/kmaps-app/.env.development
+++ b/kmaps-app/.env.development
@@ -1,5 +1,6 @@
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_SOLR_KMASSETS=https://mandala-solr-proxy-dev.internal.lib.virginia.edu/solr/kmassets
+# REACT_APP_SOLR_KMASSETS=https://mandala-solr-proxy-dev.internal.lib.virginia.edu/solr/kmassets
+REACT_APP_SOLR_KMASSETS=https://cicada.shanti.virginia.edu/solrproxy
 REACT_APP_SOLR_KMTERMS=https://mandala-solr-proxy-dev.internal.lib.virginia.edu/solr/kmterms
 REACT_APP_DRUPAL_HOME=https://mandala-dev.internal.lib.virginia.edu
 REACT_APP_DRUPAL_AUDIO_VIDEO=https://mandala-av-dev.internal.lib.virginia.edu
