--- a/kmaps-app/.env.tibet
+++ b/kmaps-app/.env.tibet
@@ -1,7 +1,8 @@
 PUBLIC_URL=/wp-content/plugins/mandala/app/build
 REACT_APP_STANDALONE=standalone
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_SOLR_KMASSETS=https://mandala-solr-proxy-dev.internal.lib.virginia.edu/solr/kmassets
+# REACT_APP_SOLR_KMASSETS=https://mandala-solr-proxy-dev.internal.lib.virginia.edu/solr/kmassets
+REACT_APP_SOLR_KMASSETS=https://cicada.shanti.virginia.edu/solrproxy
 REACT_APP_SOLR_KMTERMS=https://mandala-solr-proxy-dev.internal.lib.virginia.edu/solr/kmterms
 REACT_APP_DRUPAL_HOME=https://mandala-dev.internal.lib.virginia.edu
 REACT_APP_DRUPAL_AUDIO_VIDEO=https://mandala-av-dev.internal.lib.virginia.edu
@@ -25,3 +26,6 @@ REACT_APP_TERMS_VIEW=75|pri.tib.sec.roman
 REACT_APP_PLACES_SETTINGS_ORDER=73,74,70,69,75,72,71
 REACT_APP_SUBJECTS_SETTINGS_ORDER=75,76,73,72,77,74
 REACT_APP_TERMS_SETTINGS_ORDER=75,73
+REACT_APP_LOGIN_URL=https://cicada.shanti.virginia.edu/solrproxy/auth.php
+REACT_APP_LOGOUT_URL=https://cicada.shanti.virginia.edu/solrproxy/logout.php
+REACT_APP_HOME_URL=http://thl-kadence.local/
