styling loggin button

--- a/kmaps-app/.env.development
+++ b/kmaps-app/.env.development
@@ -22,4 +22,5 @@ REACT_APP_TERMS_PERSPECTIVE=
 REACT_APP_LOGIN_URL=https://cicada.shanti.virginia.edu/solrproxy/auth.php
 REACT_APP_LOGOUT_URL=https://cicada.shanti.virginia.edu/solrproxy/logout.php
 REACT_APP_HOME_URL=https://dev-standalone.kmaps.virginia.edu/
+REACT_APP_PING_URL=https://cicada.shanti.virginia.edu/solrproxy/ping.php
 
