--- a/kmaps-app/.env.tibet
+++ b/kmaps-app/.env.tibet
@@ -28,4 +28,5 @@ REACT_APP_SUBJECTS_SETTINGS_ORDER=75,76,73,72,77,74
 REACT_APP_TERMS_SETTINGS_ORDER=75,73
 REACT_APP_LOGIN_URL=https://cicada.shanti.virginia.edu/solrproxy/auth.php
 REACT_APP_LOGOUT_URL=https://cicada.shanti.virginia.edu/solrproxy/logout.php
-REACT_APP_HOME_URL=http://thl-kadence.local/
+REACT_APP_HOME_URL=https://new.thdl.org/
+REACT_APP_PING_URL=https://cicada.shanti.virginia.edu/solrproxy/ping.php
