update to .env for tibet to point to new dockerized solr proxy

--- a/kmaps-app/.env.tibet
+++ b/kmaps-app/.env.tibet
@@ -2,8 +2,12 @@ PUBLIC_URL=/wp-content/plugins/mandala/app/build
 REACT_APP_STANDALONE=standalone
 SKIP_PREFLIGHT_CHECK=true
 # REACT_APP_SOLR_KMASSETS=https://mandala-solr-proxy-dev.internal.lib.virginia.edu/solr/kmassets
-REACT_APP_SOLR_KMASSETS=https://cicada.shanti.virginia.edu/solrproxy
+REACT_APP_SOLR_KMASSETS=https://cicada.shanti.virginia.edu/solrproxy2
 REACT_APP_SOLR_KMTERMS=https://mandala-solr-proxy-dev.internal.lib.virginia.edu/solr/kmterms
+REACT_APP_LOGIN_URL=https://cicada.shanti.virginia.edu/solrproxy2/auth.php
+REACT_APP_LOGOUT_URL=https://cicada.shanti.virginia.edu/solrproxy2/logout.php
+REACT_APP_PING_URL=https://cicada.shanti.virginia.edu/solrproxy2/ping.php
+REACT_APP_HOME_URL=https://new.thdl.org/
 REACT_APP_DRUPAL_HOME=https://mandala-dev.internal.lib.virginia.edu
 REACT_APP_DRUPAL_AUDIO_VIDEO=https://mandala-av-dev.internal.lib.virginia.edu
 REACT_APP_DRUPAL_IMAGES=https://mandala-images-dev.internal.lib.virginia.edu
@@ -14,7 +18,7 @@ REACT_APP_DRUPAL_TERMS=https://mandala-dev.internal.lib.virginia.edu/terms
 REACT_APP_DRUPAL_TEXTS=https://mandala-texts-dev.internal.lib.virginia.edu
 REACT_APP_DRUPAL_VISUALS=https://mandala-visuals-dev.internal.lib.virginia.edu
 REACT_APP_MANDALA_KB=https://confluence.its.virginia.edu/display/KB/Mandala+Suite+of+Tools
-REACT_APP_PUBLIC_URL=https://thdl.shanti.a2hosted.com/
+REACT_APP_PUBLIC_URL=https://new.thdl.org/
 REACT_APP_PUBLIC_PATH=/
 REACT_APP_STANDALONE_PATH=/mandala
 REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyAXpnXkPS39-Bo5ovHQWvyIk6eMgcvc1q4
@@ -26,7 +30,3 @@ REACT_APP_TERMS_VIEW=75|pri.tib.sec.roman
 REACT_APP_PLACES_SETTINGS_ORDER=73,74,70,69,75,72,71
 REACT_APP_SUBJECTS_SETTINGS_ORDER=75,76,73,72,77,74
 REACT_APP_TERMS_SETTINGS_ORDER=75,73
-REACT_APP_LOGIN_URL=https://cicada.shanti.virginia.edu/solrproxy/auth.php
-REACT_APP_LOGOUT_URL=https://cicada.shanti.virginia.edu/solrproxy/logout.php
-REACT_APP_HOME_URL=https://new.thdl.org/
-REACT_APP_PING_URL=https://cicada.shanti.virginia.edu/solrproxy/ping.php
