updating react standalone site dev to not use solr proxy to test new schema

--- a/kmaps-app/.env.development
+++ b/kmaps-app/.env.development
@@ -1,8 +1,8 @@
 SKIP_PREFLIGHT_CHECK=true
-# REACT_APP_SOLR_KMASSETS=https://mandala-solr-proxy-dev.internal.lib.virginia.edu/solr/kmassets
-REACT_APP_SOLR_KMASSETS=https://cicada.shanti.virginia.edu/solrproxy2
+REACT_APP_SOLR_KMASSETS=https://mandala-solr-proxy-dev.internal.lib.virginia.edu/solr/kmassets
+# REACT_APP_SOLR_KMASSETS=https://cicada.shanti.virginia.edu/solrproxy2
 REACT_APP_SOLR_KMTERMS=https://mandala-solr-proxy-dev.internal.lib.virginia.edu/solr/kmterms
-REACT_APP_LOGIN_URL=https://cicada.shanti.virginia.edu/solrproxy2/auth.php
+# REACT_APP_LOGIN_URL=https://cicada.shanti.virginia.edu/solrproxy2/auth.php
 REACT_APP_LOGOUT_URL=https://cicada.shanti.virginia.edu/solrproxy2/logout.php
 REACT_APP_PING_URL=https://cicada.shanti.virginia.edu/solrproxy2/ping.php
 REACT_APP_HOME_URL=https://dev-standalone.kmaps.virginia.edu/
