--- a/kmaps-app/.env.tibet
+++ b/kmaps-app/.env.tibet
@@ -30,3 +30,4 @@ REACT_APP_TERMS_VIEW=75|pri.tib.sec.roman
 REACT_APP_PLACES_SETTINGS_ORDER=73,74,70,69,75,72,71
 REACT_APP_SUBJECTS_SETTINGS_ORDER=75,76,73,72,77,74
 REACT_APP_TERMS_SETTINGS_ORDER=75,73
+REACT_APP_KMAP_EXCLUDES=places-13742
