adding env setting to open Asia by default in Tibet places tree

--- a/kmaps-app/.env.tibet
+++ b/kmaps-app/.env.tibet
@@ -31,3 +31,4 @@ REACT_APP_PLACES_SETTINGS_ORDER=73,74,70,69,75,72,71
 REACT_APP_SUBJECTS_SETTINGS_ORDER=75,76,73,72,77,74
 REACT_APP_TERMS_SETTINGS_ORDER=75,73
 REACT_APP_KMAP_EXCLUDES=places-13742
+REACT_APP_KMAP_OPEN=places-13740
