--- a/kmaps-app/.env.production
+++ b/kmaps-app/.env.production
@@ -18,3 +18,4 @@ REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyAXpnXkPS39-Bo5ovHQWvyIk6eMgcvc1q4
 REACT_APP_GOSERVER_URL=https://places.kmaps.virginia.edu/geoserver
 REACT_APP_PROJECT=
 REACT_APP_TERMS_PERSPECTIVE=
+REACT_APP_SEARCH_VIEW_DEFAULT=list
