--- a/kmaps-app/.env.test
+++ b/kmaps-app/.env.test
@@ -16,3 +16,4 @@ REACT_APP_PUBLIC_PATH=/mandala-om/
 REACT_APP_STANDALONE_PATH=/mandala
 REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyAXpnXkPS39-Bo5ovHQWvyIk6eMgcvc1q4
 REACT_APP_GOSERVER_URL=https://places.kmaps.virginia.edu/geoserver
+REACT_APP_SEARCH_VIEW_DEFAULT=list
