--- a/kmaps-app/.env.tibet
+++ b/kmaps-app/.env.tibet
@@ -32,3 +32,4 @@ REACT_APP_SUBJECTS_SETTINGS_ORDER=75,76,73,72,77,74
 REACT_APP_TERMS_SETTINGS_ORDER=75,73
 REACT_APP_KMAP_EXCLUDES=places-13742
 REACT_APP_KMAP_OPEN=places-13740
+REACT_APP_SEARCH_VIEW_DEFAULT=list
