--- a/kmaps-app/.env.uf
+++ b/kmaps-app/.env.uf
@@ -24,4 +24,4 @@ REACT_APP_LOGIN_URL=https://cicada.shanti.virginia.edu/solrproxy/auth.php
 REACT_APP_LOGOUT_URL=https://cicada.shanti.virginia.edu/solrproxy/logout.php
 REACT_APP_HOME_URL=https://dev-standalone.kmaps.virginia.edu/
 REACT_APP_PING_URL=https://cicada.shanti.virginia.edu/solrproxy/ping.php
-
+REACT_APP_SEARCH_VIEW_DEFAULT=list
