Adding thdl prod site for building and implementing dictionary order for terms from Kmaps api

--- a/kmaps-app/.env.tibet
+++ b/kmaps-app/.env.tibet
@@ -1,8 +1,8 @@
 PUBLIC_URL=/wp-content/plugins/mandala/app/build
 REACT_APP_STANDALONE=standalone
 SKIP_PREFLIGHT_CHECK=true
-# REACT_APP_SOLR_KMASSETS=https://mandala-solr-proxy-dev.internal.lib.virginia.edu/solr/kmassets
-REACT_APP_SOLR_KMASSETS=https://cicada.shanti.virginia.edu/solrproxy2
+REACT_APP_SOLR_KMASSETS=https://mandala-solr-proxy-dev.internal.lib.virginia.edu/solr/kmassets
+# REACT_APP_SOLR_KMASSETS=https://cicada.shanti.virginia.edu/solrproxy2
 REACT_APP_SOLR_KMTERMS=https://mandala-solr-proxy-dev.internal.lib.virginia.edu/solr/kmterms
 REACT_APP_LOGIN_URL=https://cicada.shanti.virginia.edu/solrproxy2/auth.php
 REACT_APP_LOGOUT_URL=https://cicada.shanti.virginia.edu/solrproxy2/logout.php
