--- a/kmaps-app/package.json
+++ b/kmaps-app/package.json
@@ -73,7 +73,7 @@
         "jcsbuild": " env-cmd -f ./.env.cj.prod npm run-script build",
         "ufbuild": "env-cmd -f ./.env.uf npm run-script build",
         "ufprod": "env-cmd -f ./.env.uf.prod npm run-script build",
-        "tibetdev": "env-cmd -f ./.env.tibet npm run-script build",
+        "tibetbuild": "env-cmd -f ./.env.tibet npm run-script build",
         "tibetprod": "env-cmd -f ./.env.tibet.prod npm run-script build",
         "tibetlocal": "env-cmd -f ./.env.tibet.local npm run-script build; npm run-script tiblocalsync",
         "tiblocalsync": "rsync -avz --delete /Users/thangrove/Documents/Sandbox/Mandala/StandAlone/FU/mandala-om/kmaps-app/build/ /Users/thangrove/Local\\ Sites/thl-kadence/app/public/wp-content/plugins/mandala/app/build",
